--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,6 @@ pluginManagement {
         }
     }
 }
+
+include(":bonusblocks")
+project(":bonusblocks").projectDir = file("${rootProject.projectDir}/../bonusblocks")
