--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,7 @@ dependencies {
 	modImplementation "com.github.Turnip-Labs:bta-halplibe:${project.halplibe_version}"
 
 	modImplementation "ModMenu:ModMenu:${project.mod_menu_version}"
+    implementation project(path: ":bonusblocks")
 	modImplementation "BTANoNameDyes:noname_dyes:1.2"
 
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
